--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bugs</title>
+    <title>Game of Intelligent Design</title>
     <link rel="stylesheet" type="text/css" href="src/assets/style/style.css" media="screen" />
+    <link rel="shortcut icon" type="x-icon" href="src/assets/images/favicon.ico" />
   </head>
   <body>
     <div id="app">
@@ -31,6 +32,7 @@
     <div id="infoModalVeil">
       <div id="infoModal">
         <div id="infoModalClose"></div>
+        <div id="infoLogo"><img src="src/assets/images/logo_lg_transparent.png" /></div>
         <div id="infoModalContent">This is where the content goes</div>
       </div>
     </div>
