--- a/src/challenges/001-forward/info.html
+++ b/src/challenges/001-forward/info.html
@@ -1,2 +1,39 @@
-<h1>Forward</h1>
-<p>A description of how this challenge works.</p>
+<h1>Challenge: <i>Forward</i></h1>
+<p>
+  This is an introductory challenge to familiarize users with the game concepts. It's super simple. In fact, the
+  solution is in the sample code. Reading the comments there is strongly recommended. Go do that now and then come back.
+  Take all the time you need. I'll wait here. Doo da doop da doop... &#127925;
+</p>
+
+<h2>Sensors</h2>
+This challenge doesn't have any sensors. Focus your attention on the actuators for now.
+
+<h2>Actuators</h2>
+<table>
+  <thead>
+    <td>Key</td>
+    <td>Description</td>
+    <td>Range</td>
+  </thead>
+  <tr>
+    <td>speed</td>
+    <td>How fast the agent moves forward or backward.</td>
+    <td>-0.5 ... 4</td>
+  </tr>
+  <tr>
+    <td>turn</td>
+    <td>Rate of turning.</td>
+    <td>-&#x03C0;/12 ... &#x03C0;/12</td>
+  </tr>
+  <tr>
+    <td>sidle</td>
+    <td>How fast the agent moves side to side.</td>
+    <td>-0.4 ... 0.4</td>
+  </tr>
+</table>
+
+<h2>Goal</h2>
+<p>
+  Move the agent into the goal area, being the yellow circle. It will turn green when the goal is achieved. You cannot
+  press any keys during execution, otherwise the goal area will deactivate and turn grey/gray tomato/tomato.
+</p>
