--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
         <div class="modalScroller">
           <div id="configModalClose"></div>
           <div id="configModalContent">
-            <input id="mousePositionCheckbox" type="checkbox" />
-            <label for="mousePositionCheckbox">Show mouse position</label>
+            <h1>Config</h1>
+            <div class="configInput">
+              <label for="challengeSelect">Challenge:</label>
+              <select id="challengeSelect"></select>
+            </div>
+            <div class="configInput">
+              <input id="mousePositionCheckbox" type="checkbox" />
+              <label for="mousePositionCheckbox">Show mouse position</label>
+            </div>
           </div>
         </div>
       </div>
