--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
               <input id="mousePositionCheckbox" type="checkbox" />
               <label for="mousePositionCheckbox">Show mouse position</label>
             </div>
+            <div class="configInput">
+              <input id="indentOnTabCheckbox" type="checkbox" />
+              <label for="indentOnTabCheckbox">Indent on tab</label>
+            </div>
           </div>
         </div>
       </div>
