--- a/src/challenges/003-gradient/info.html
+++ b/src/challenges/003-gradient/info.html
@@ -1,7 +1,7 @@
 <h1>Challenge: <i>Gradient</i></h1>
 <p>
-  In this challenge you need to follow a gradient trail. There are targes along the way, each of which needs to be
-  touched.
+  In this challenge you need to follow a gradient trail. There are targets along the way, each of which needs to be
+  touched in order of gradient amount.
 </p>
 <p>
   This challenge is a little complex, but it is pretty satisfying to watch it working. In the default code there is
