--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game of Intelligent Design</title>
     <link rel="stylesheet" type="text/css" href="src/assets/style/style.css" media="screen" />
-    <link rel="shortcut icon" type="x-icon" href="src/assets/images/favicon.ico" />
+    <!-- <link rel="shortcut icon" type="x-icon" href="src/assets/images/favicon.ico" /> -->
+    <link rel="shortcut icon" type="image/gif" href="src/assets/images/logo_transparent.png" />
     <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/century-gothic" />
   </head>
   <body>
     <div id="app">
       <div id="codeEditor"></div>
       <div id="controls">
-        <div id="buttons"></div>
         <div id="challengeHelp">
           <div id="challengeName"></div>
           <div id="help"></div>
         </div>
+        <div id="buttons"></div>
         <div id="mousePositionsContainer">
           <div id="mouseIcon"></div>
           <div id="mousePositions">
