--- a/src/assets/genericInfo.html
+++ b/src/assets/genericInfo.html
@@ -152,7 +152,7 @@
 <h2>Boring Technical Details</h2>
 <p>
   In case you were wondering, this game has no backend slash server-side. Your scripts, progress, and other state are
-  stored using local browser storgae. The good news is that there you don't need to registers or anything. The downside
+  stored using local browser storage. The good news is that there you don't need to registers or anything. The downside
   is that your scripts can't be sync'ed across your devices, you can't compare your progress with others, and neat stuff
   like that. Also, you may find that your scripts get pretty big and cumbersome for the inline editor. We are
   considering other delivery mechanisms that would address problems like these.
