--- a/src/assets/genericInfo.html
+++ b/src/assets/genericInfo.html
@@ -137,6 +137,26 @@
   </tr>
 </table>
 
+<a id="keystrokes"></a>
+<h3>Keystrokes</h3>
+<table>
+  <thead>
+    <td>Keystroke</td>
+    <td>Location</td>
+    <td>Description</td>
+  </thead>
+  <tr>
+    <td>Ctrl+S / &#x2318;S</td>
+    <td>Editor</td>
+    <td>Save the script and reset the simulation</td>
+  </tr>
+  <tr>
+    <td>Shift+Ctrl+S / &#x21E7;&#x2318;S</td>
+    <td>Editor</td>
+    <td>Save the script without reset</td>
+  </tr>
+</table>
+
 <a id="scripts-globals"></a>
 <h3>Globals</h3>
 <p>
