recenter on dblclick

--- a/src/assets/genericInfo.html
+++ b/src/assets/genericInfo.html
@@ -138,7 +138,7 @@
 </table>
 
 <a id="keystrokes"></a>
-<h3>Keystrokes</h3>
+<h3>Keystrokes and Mouse Events</h3>
 <table>
   <thead>
     <td>Keystroke</td>
@@ -154,6 +154,21 @@
     <td>Shift+Ctrl+S / &#x21E7;&#x2318;S</td>
     <td>Editor</td>
     <td>Save the script without reset</td>
+  </tr>
+  <tr>
+    <td>Mouse Drag</td>
+    <td>Canvas</td>
+    <td>Pan the simulation</td>
+  </tr>
+  <tr>
+    <td>Mouse Wheel</td>
+    <td>Canvas</td>
+    <td>Zoom the simulation</td>
+  </tr>
+  <tr>
+    <td>Mouse Double Click</td>
+    <td>Canvas</td>
+    <td>Recenter the simulation</td>
   </tr>
 </table>
 
